# InvertedIndexDNF

src/: CMakeLists.txt  InvertedIndexDNF.cpp
src/index/: Container.hpp  InversedIndex.hpp
src/utils/: CMakeLists.txt  FileLoader.hpp  RedisLoader.hpp
